# cpython

./: CMakeLists.txt  Новый текстовый документ.txt
.github/workflows/: trigger-bots.yml
Doc/whatsnew/: 3.11.rst  3.12.rst
Include/internal/: pycore_opcode_metadata.h
Lib/: filecmp.py  fileinput.py  imaplib.py  ipaddress.py  mimetypes.py  modulefinder.py  pdb.py  pydoc.py  quopri.py  ssl.py  tabnanny.py  timeit.py  webbrowser.py
Lib/asyncio/: base_events.py  events.py  proactor_events.py  selector_events.py  sslproto.py  streams.py  windows_events.py
Lib/idlelib/: pyshell.py
Lib/test/: test_ftplib.py  test_ipaddress.py  test_logging.py  test_mimetypes.py  test_poplib.py  test_ssl.py  test_support.py  test_tarfile.py  test_uuid.py
Lib/test/libregrtest/: save_env.py
Lib/test/support/: logging_helper.py  server_helper.py  threading_helper.py
Lib/test/test_asyncio/: test_ssl.py  test_streams.py
Misc/NEWS.d/next/Core and Builtins/: 2022-07-02-02-19-13.gh-issue-91102.mY8gtx.rst
Misc/NEWS.d/next/Tests/: 2022-06-25-14-36-44.gh-issue-74699.jeOTBk.rst
Modules/: _ssl.c  overlapped.c  posixmodule.c  pwdmodule.c  readline.c  socketmodule.c
Modules/clinic/: _ssl.c.h  socketmodule.c.h
Objects/: bytes_methods.c  bytesobject.c  unicodeobject.c
Objects/clinic/: bytesobject.c.h  unicodeobject.c.h
PCbuild/: lib.pyproj  pcbuild.proj  pcbuild.sln
Python/: initconfig.c
Tools/c-analyzer/cpython/: globals-to-fix.tsv
Tools/cases_generator/: generate_cases.py
Tools/demo/: spreadsheet.py
Tools/freeze/: checkextensions_win32.py
